[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/Adult.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Mini.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/PlayerSounds.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Camera.tscn" type="PackedScene" id=5]

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="Adult" parent="." instance=ExtResource( 2 )]

[node name="Mini" parent="." instance=ExtResource( 3 )]
visible = false
scale = Vector2( 0.15, 0.15 )

[node name="PlayerSounds" parent="." instance=ExtResource( 4 )]

[node name="Camera2D" parent="." instance=ExtResource( 5 )]
smoothing_enabled = true
[connection signal="game_over" from="Adult" to="." method="game_over"]
[connection signal="grow" from="Adult" to="." method="_on_Dino_grow"]
[connection signal="hit" from="Adult" to="." method="_on_Dino_hit"]
[connection signal="play_sound" from="Adult" to="PlayerSounds" method="_on_play_sound"]
[connection signal="shrink" from="Adult" to="." method="_on_Dino_shrink"]
[connection signal="game_over" from="Mini" to="." method="game_over"]
[connection signal="grow" from="Mini" to="." method="_on_Dino_grow"]
[connection signal="hit" from="Mini" to="." method="_on_Dino_hit"]
[connection signal="play_sound" from="Mini" to="PlayerSounds" method="_on_play_sound"]
[connection signal="shrink" from="Mini" to="." method="_on_Dino_shrink"]
[connection signal="win" from="Mini" to="." method="win"]
